# Spec-Driven-Development

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
history/prompts/constitution/: 1-create-todo-constitution.constitution.prompt.md
history/prompts/todo-app/: 2-create-todo-app-spec.spec.prompt.md  4-create-todo-app-tasks.tasks.prompt.md  5-implement-todo-app.implementation.prompt.md
phase-1/: .gitignore
phase-1/.specify/memory/: constitution.md
phase-1/history/prompts/todo-app/: 3-create-todo-app-plan.plan.prompt.md
phase-1/tests/: test_todo_service.py
phase-1/todo_app/: todo.py  todo_service.py
specs/001-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-app/checklists/: requirements.md
specs/001-todo-app/contracts/: todo-api-contract.md
tests/: test_cli_handler.py  test_edge_cases.py  test_functional_requirements.py  test_performance.py  test_todo.py
todo_app/: __main__.py  cli_handler.py
