[project]
name = "todo-app"
version = "0.1.0"
description = "A command-line Todo application that stores tasks entirely in memory"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
todo = "todo_app.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"